<resources>
    <string name="app_name">Pro_Todo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_task">Input task</string>
    <string name="add_task">Add Task</string>
    <string name="daily_task">Daily Tasks</string>
    <string name="schedule">Schedule</string>
    <string name="edit">Edit</string>
    <string name="dashboard">Dash Board</string>
    <string name="home">Home</string>
    <string name="tasks">Task</string>
    <string name="description">Description</string>
    <string name="choose_category">Choose Category</string>
    <string name="create_new_category">Create new category</string>
    <string name="category_name">Category name:</string>
    <string name="category_nameis">Category name:</string>
    <string name="category_icon">Category icon:</string>
    <string name="category_color">Category color:</string>
    <string name="create_category">Create Category</string>
    <string name="cancel">Cancel</string>
    <string name="preview">Preview:</string>
    <string name="study">Study</string>
    <string name="coming_soon">Coming soon...</string>

</resources>